@@ -1,3 +1,6 @@
+2013-01-30 Graeme Gott <graeme@gottcode.org>
+	* Scale board to be 50% larger than default font.
+
 2013-01-29 Graeme Gott <graeme@gottcode.org>
 	* Allow player to scroll board by dragging.
 
